2004-10-19  Pawel Salek

	* libbalsa/filter.c: display information provided by GError.
	* libbalsa/libbalsa.h: add new error codes.
	* libbalsa/mailbox.[ch]: copy() and add_message provide more info
	on error.
	* libbalsa/mailbox_imap.c: set GError.
	* libbalsa/mailbox_{maildir,mh}.c: ditto.
	* libbalsa/mailbox_mbox.c: ditto. Fix rewind bug in ::check().
	* libbalsa/mailbox_pop3.c: do not leave messages around. More
	thourough error checking: do not remove messages from server when
	save fails.
	* libbalsa/send.c: adapt to changed LibBalsaMailbox API.
	* src/balsa-index.c: report more info on error.

2004-10-19 18:26  PeterB

	* src/main-window.c: more accurate and informative progress dialog
	label.
	* src/balsa-app.c: remove assertion.

2004-10-17 15:37  PeterB

	* src/balsa-index.c: unref the message when clearing/changing
	index->current_message, and do not use weak refs.

2004-10-16 08:55  PeterB

	* src/: balsa-index.c, balsa-index.h: set
	LIBBALSA_MESSAGE_FLAG_SELECTED user flag to block message from
	being filtered out of the view; handle selecting deleted message;
	use BalsaIndex::search_iter when possible.
	* libbalsa/: mailbox.c, mailbox_imap.c, mailbox_maildir.c,
	mailbox_mbox.c, mailbox_mh.c, message.h: implement
	LIBBALSA_MESSAGE_FLAG_SELECTED user flag, manage it in backends,
	and test it before filtering message out of the view.
	* libbalsa/filter.c: do not call
	libbalsa_mailbox_search_iter_free--view filtering is now managed by
	mailbox code.
	* libbalsa/body.c: check for NULL body.

2004-10-15 15:06  PeterB

	* src/main-window.c: add mnemonics for next/previous part menu
	items.
	* src/message-window.c: manage sensitivity of next/previous part
	controls, and of move-to-trash controls.
	* src/: balsa-message.c, balsa-message.h, main-window.c: manage
	sensitivity of next/previous part controls.
	* src/balsa-message.c: test for missing body_list.
	* src/main-window.c: allow remote trashbox to be emptied.

2004-10-14 22:34  PeterB
