@@ -30,7 +30,6 @@ EXTRA_DIST = \
 	libimap-marshal.list
 
 INCLUDES= -I${top_builddir} -I${top_srcdir} -I${top_srcdir}/libbalsa \
-	-I${top_srcdir}/libmutt -I${top_builddir}/libmutt \
 	-I${top_srcdir}/libbalsa/imap \
 	$(BALSA_CFLAGS)
 
